<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rfsoftlab.jakir.multi_language.MainActivity">
    <item
        android:id="@+id/english"
        android:orderInCategory="100"
        android:title="@string/english"
        app:showAsAction="never" />
    <item
        android:id="@+id/bangla"
        android:orderInCategory="100"
        android:title="@string/bangla"
        app:showAsAction="never" />
    <item
        android:id="@+id/japanese"
        android:orderInCategory="100"
        android:title="@string/japanese"
        app:showAsAction="never" />
    <item
        android:id="@+id/french"
        android:orderInCategory="100"
        android:title="@string/french"
        app:showAsAction="never" />
</menu>
